--- a/data/articles/post-2.mdx
+++ b/data/articles/post-2.mdx
@@ -23,7 +23,7 @@ you have to be, to become an excellent software engineer.
 
 Modern frameworks, dependencies and new packages are created daily, to improve company’s online productivity. The technologies are evolving at the speed of light, 
 that force the software development environment to upgrade and adjust as quickly. 
-That may unavoidably cause some disruptions and conflicts between these newest packages versions and those already used and installed.
+That may unavoidably causes some disruptions and conflicts between these newest packages versions and those already used and installed.
 
 Among the different type of bugs, the main ones are named software regressions:
 
@@ -60,7 +60,9 @@ The three modules:
 ## Conclusion
 
 By identifying and categorizing the codebase into these different modules, troubleshooting bugs are getting much easier faster, and let’s face it less frustrating.
-Even after adding new features or modifying a specific component in the application, the Model View Controller pattern provides precisely, an enhanced code protection for the team that is building it. That paradigm is smartly designed to update/change each one of these sections, without fearing of breaking any other parts of the application. 🥳 🥳 🥳
+Even after adding new features or modifying a specific component in the application, the Model View Controller pattern provides precisely, an enhanced code protection 
+for the team that is building it. 
+That paradigm is smartly designed to update/change each one of these sections, without fearing of breaking any other parts of the application. 🥳 🥳 🥳
 
 
 
