--- a/data/articles/post-2.mdx
+++ b/data/articles/post-2.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Debgihjgh-ing ❌ .. debugh-ing❌ .. debugging ✅'
-publishedAt: '2022-07-12'
+publishedAt: '2022-08-12'
 description: Bugs are like obstacles in life, you have to vanquish them
 seoDescription: This is the seoDescription for this markdown file.
 category: 'Technology'
@@ -13,47 +13,58 @@ image: '/images/pic5.png'
   
 --- 
 
-I have always thought that being a web developer, was all about the building and the architectural part of developping a web application, with a collaborative team. As a matter of fact, I was partly wrong. 
+I have always thought that part of being a web developer, was all about the building and the architectural part of developing a web application, with a collaborative team.
+As a matter of fact, I was partly wrong.
 
-Debugging is as important as programming and designging the project provided. 
+Debugging is as important as programming and designing the project itself.
 
-Troubleshooting broken code for hours even days sometimes, made me realize how **organized**, thorough, attentive, you have to be, to become a excellent software engineer.
+Troubleshooting broken code can sometimes take hours even days. That less pleasant and more frustrating aspect of the task, made me also realize how **organized**, thorough and attentive,
+you have to be, to become an excellent software engineer.
 
-Modern frameworks, dependencies and new packages are daily created to improve the company online productivity. The technology evolving as light speed, forces software developments to upgrade and adjust quickly its packages, and will unavoidably cause disruptions with its newest versions.
+Modern frameworks, dependencies and new packages are created daily, to improve company’s online productivity. The technologies are evolving at the speed of light, 
+that force the software development environment to upgrade and adjust as quickly. 
+That may unavoidably causes some disruptions and conflicts between these newest packages versions and those already used and installed.
 
-Among the different type of bugs, the main ones are named **software regressions** :
+Among the different type of bugs, the main ones are named software regressions:
 
- - The local bugs : a code change that causes a new dysfunction in the modified module or component. Example: a missing semi-colon that paralyze a whole CSS file.
- - The remote bugs : a change in one part of the application that break the functionality in another module or component. Example: importing a module with a typo in the file title.
- - The unmasked bugs : a code change notifiying an already existing bug that had no effect before the change.
+• The local bugs: a code change that causes a new dysfunction in the modified module or component. Example: a missing semi-colon that paralyze a whole CSS file.
+• The remote bugs: a change in one part of the application that break the functionality in another module or component. Example: importing a module with a typo in the file title.
+• The unmasked bugs: a code change notifying an already existing bug, that had no effect before the change.
 
-Indeed, development projects are getting bigger with newer functionalities and features. It will enhance the web interface perfomance but the code will more likely to face bugs and blocks along the way, as incompatibility issues for example.
+Indeed, development projects are getting bigger and more ambitious, with newer functionalities and more advanced features.
+That will certainly enhance the web interface performance, but by system patching modern modules with already existing code, or creating projects with beta version dependencies for example, 
+the probability of the developing project to face regression bugs, and blocks along the way, will extend incompatibility issues and raise simultaneously the probability of bugs.
 
-Conclusion : Developers have to logically structure their applications in a more secure way.
+Conclusion: Developers have no choice, but to logically structure their applications in a more secure way.
 
 ## Patterns, Paradigms, Set of rules
 
-Debugging is a way to learn and a way to re organise effectively its project, so the codebase stays maintainable in the long run. 
+Debugging is also an effective way to learn from these errors: by investigating and identifying its source, in order to understand why it has broken the code, so that cannot happen again, or at least not systematically. 
+It is also a way to re-organize effectively its project, so the codebase stays maintainable in the long run.
 
-Along the way, strategies and conventions have to be incorporated, to debug more easily when blocks are faced, and secure the codebase until its online deployment.
+The web developing journey has debuted a few decades ago, with only singular HTML files. Now as the global market becomes more and more competitive and dynamic, 
+the innovation and technology breakthroughs, have led to the creation of strategies and conventions that are incorporated into programming, and are naturally followed by the web development community.
 
-My MVC lecture <a href="/article/post-7">post </a>, is actually an perfect example on how to standardize the codebase with a strong configuration, 
-that will avoid any dysfunctions during the different building phases.
+My MVC lecture <a href="/article/post-7"> post </a> , is actually a perfect example on how to standardize the codebase with a strong configuration, that will avoid any dysfunctions during the different building phases,
+to troubleshoot more easily, and secure the codebase until its online deployment phase.
+ 
+That architecture pattern, splits the code into three modules, in order to identify quickly which roles and responsibilities each of these possesses:
 
-That architecture pattern, split the code into three modules, in order to identify quickly which roles and repsonsibilities each of these possesses: 
+The three modules:
 
-The three modules : 
+• Model: the data architecture
 
--Model : data architecture 
-- View : graphic user interface 
-- Controller : interaction functionality between the view and the model.
+• View: the graphic user interface
+
+• Controller: the interaction functionality between the view and the model.
+
 
 ## Conclusion
 
-By identifying and categorize the codebase into these different modules, troubleshooting bugs are getting easier and quicker.
-And even after adding or modifying features into the application, the Model View Controller pattern provides an enhanced protection of the code for the team that is building it. 
+By identifying and categorizing the codebase into these different modules, troubleshooting bugs are getting much easier faster, and let’s face it less frustrating.
+Even after adding new features or modifying a specific component in the application, the Model View Controller pattern provides precisely, an enhanced code protection 
+for the team that is building it. 
 That paradigm is smartly designed to update/change each one of these sections, without fearing of breaking any other parts of the application. 🥳 🥳 🥳
-
 
 
 
